--- a/.travis.yml
+++ b/.travis.yml
@@ -81,33 +81,33 @@ install:
 
 script:
 # Run the e2e tests in the production environment (using --prod_env).
-- if [ "$RUN_E2E_TESTS_ACCESSIBILITY" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="accessibility" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_ADDITIONAL_EDITOR_FEATURES" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="additionalEditorFeatures" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_ADDITIONAL_PLAYER_FEATURES" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="additionalPlayerFeatures" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_ADMIN_PAGE" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="adminPage" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_COLLECTIONS" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="collections" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_COMMUNITY_DASHBOARD" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="communityDashboard" --community_dashboard_enabled --prod_env; fi
-- if [ "$RUN_E2E_TESTS_CORE_EDITOR_AND_PLAYER_FEATURES" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="coreEditorAndPlayerFeatures" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_CREATOR_DASHBOARD" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="creatorDashboard" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_EMBEDDING" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="embedding" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_EXPLORATION_FEEDBACK_TAB" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="explorationFeedbackTab" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_EXPLORATION_HISTORY_TAB" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="explorationHistoryTab" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_EXPLORATION_IMPROVEMENTS_TAB" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="explorationImprovementsTab" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_EXPLORATION_STATISTICS_TAB" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="explorationStatisticsTab" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_EXPLORATION_TRANSLATION_TAB" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="explorationTranslationTab" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_EXTENSIONS" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="extensions" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_LEARNER_DASHBOARD" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="learnerDashboard" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_LEARNER" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="learner" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_LIBRARY" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="library" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_NAVIGATION" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="navigation" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_PREFERENCES" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="preferences" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_PROFILE_FEATURES" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="profileFeatures" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_PROFILE_MENU" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="profileMenu" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_PUBLICATION" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="publication" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_SKILL_EDITOR" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="skillEditor" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_SUBSCRIPTIONS" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="subscriptions" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_TOPICS_AND_SKILLS_DASHBOARD" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="topicsAndSkillsDashboard" --prod_env; fi
-- if [ "$RUN_E2E_TESTS_USERS" == 'true' ]; then travis_retry bash scripts/run_e2e_tests.sh --suite="users" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_ACCESSIBILITY" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="accessibility" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_ADDITIONAL_EDITOR_FEATURES" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="additionalEditorFeatures" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_ADDITIONAL_PLAYER_FEATURES" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="additionalPlayerFeatures" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_ADMIN_PAGE" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="adminPage" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_COLLECTIONS" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="collections" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_COMMUNITY_DASHBOARD" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="communityDashboard" --community_dashboard_enabled --prod_env; fi
+- if [ "$RUN_E2E_TESTS_CORE_EDITOR_AND_PLAYER_FEATURES" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="coreEditorAndPlayerFeatures" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_CREATOR_DASHBOARD" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="creatorDashboard" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_EMBEDDING" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="embedding" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_EXPLORATION_FEEDBACK_TAB" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="explorationFeedbackTab" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_EXPLORATION_HISTORY_TAB" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="explorationHistoryTab" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_EXPLORATION_IMPROVEMENTS_TAB" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="explorationImprovementsTab" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_EXPLORATION_STATISTICS_TAB" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="explorationStatisticsTab" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_EXPLORATION_TRANSLATION_TAB" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="explorationTranslationTab" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_EXTENSIONS" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="extensions" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_LEARNER_DASHBOARD" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="learnerDashboard" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_LEARNER" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="learner" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_LIBRARY" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="library" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_NAVIGATION" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="navigation" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_PREFERENCES" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="preferences" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_PROFILE_FEATURES" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="profileFeatures" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_PROFILE_MENU" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="profileMenu" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_PUBLICATION" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="publication" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_SKILL_EDITOR" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="skillEditor" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_SUBSCRIPTIONS" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="subscriptions" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_TOPICS_AND_SKILLS_DASHBOARD" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="topicsAndSkillsDashboard" --prod_env; fi
+- if [ "$RUN_E2E_TESTS_USERS" == 'true' ]; then bash scripts/run_e2e_tests.sh --suite="users" --prod_env; fi
 
 
 cache:
